--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,8 @@
 ---
+import Header from '../components/navigation.astro';
+import Footer from '../components/footer.astro';
+import '../styles/global.css';
+
 const pageTitle = "Home Page";
 ---
 
@@ -11,9 +15,9 @@ const pageTitle = "Home Page";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-        <a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+		<Header />
 		<h1>{pageTitle}</h1>
-	</body>
+	    <Footer />
+  	</body>
 </html>
+
