--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,10 @@
 ---
-import Navigation from '../components/navigation.astro';
-import Hamburger from '../components/Hamburger.astro';
-
+import Hamburger from './Hamburger.astro';
+import Navigation from './navigation.astro';
 ---
-
-<header> 
-    <nav> 
-        <Hamburger />
-        <Navigation />
-    </nav>
+<header>
+  <nav>
+    <Hamburger />
+    <Navigation />
+  </nav>
 </header>
