--- a/src/components/Alpine.astro
+++ b/src/components/Alpine.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<form data-netlify="true" name="sell-form" method="POST" action="/success" x-data="{ formStep: 1 }" class="space-y-2">
+<form data-netlify="true" id="sell-form" name="sell-form" method="POST" action="/success" x-data="{ formStep: 1 }" class="space-y-2">
     <div x-cloak x-show="formStep === 1">
         <div class="form-step hide">
             <label for="Name">Name*</label><input class="w-input" maxlength="256" name="Name" data-name="Name" placeholder="" type="text" id="Name" required /> <label for="Phone">Phone</label>
